--- a/src/Components/Home/Main/News.module.css
+++ b/src/Components/Home/Main/News.module.css
@@ -29,10 +29,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 24rem;
+  width: 26rem;
   height: auto;
   background-color: #fff;
   padding: 1rem;
+  margin: 0 1rem;
 }
 
 .containerItem img {
