--- a/src/Components/Footer/Atendimento.module.css
+++ b/src/Components/Footer/Atendimento.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   /*background-color: aqua;
   color: red;*/
 }
@@ -9,4 +10,11 @@
   text-transform: uppercase;
   font-size: 1.3rem;
   font-weight: 500;
+}
+
+.container p {
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  width: 20rem;
 }
