--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,5 +1,6 @@
 .container2 {
   display: flex;
+  flex-direction: column;
   width: 100%;
   background-color: var(--black1-color);
   color: #fff;
@@ -10,4 +11,12 @@
   grid-template-columns: 3fr 3fr 3fr 3fr;
   justify-content: space-between;
   width: 100%;
+  padding: 4rem 0;
+}
+
+.copy {
+  display: flex;
+  justify-content: center;
+  font-size: 1.2rem;
+  font-weight: 100;
 }
