--- a/src/Components/Footer/Informacao.module.css
+++ b/src/Components/Footer/Informacao.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  /*background-color: aqua;
+  /*background-color: green;
   color: red;*/
 }
 
@@ -9,4 +9,11 @@
   text-transform: uppercase;
   font-size: 1.3rem;
   font-weight: 500;
+}
+
+.container p {
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  width: 20rem;
 }
