--- a/src/Components/Footer/Institucional.module.css
+++ b/src/Components/Footer/Institucional.module.css
@@ -10,3 +10,10 @@
   font-size: 1.3rem;
   font-weight: 500;
 }
+
+.container p {
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  width: 20rem;
+}
