--- a/src/Components/Pages/Produto.module.css
+++ b/src/Components/Pages/Produto.module.css
@@ -1,7 +1,44 @@
 .container2 {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
   max-width: 120rem;
   height: auto;
   padding: 1rem 0rem;
   margin: auto;
-  background-color: antiquewhite;
+}
+
+.content1 {
+  display: flex;
+  flex-direction: column;
+  margin: 10rem 0rem;
+}
+
+.content2 {
+  display: flex;
+  flex-direction: column;
+  margin: 10rem 0rem;
+}
+
+.content2 h2 {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-top: 1rem;
+}
+
+.content2 h3 {
+  font-size: 2.4rem;
+  font-weight: 500;
+  margin-top: 1rem;
+}
+
+.content2 .oldPrice {
+  font-size: 1.4rem;
+  font-weight: 100;
+  margin-top: 1rem;
+}
+
+.content2 .vista {
+  font-size: 1.4rem;
+  color: var(--redPrice-color);
 }
